<resources>

    <string name="app_name">Craig O - Event App</string>

    <!-- login fields -->
    <string name="logo_placeholder">LOGO GOES HERE</string>
    <string name="no_account">No Account?</string>
    <string name="new_account_text">Create!</string>
    <string name="username_label">Username</string>
    <string name="username_box_hint">Enter username..</string>
    <string name="password_label">Password</string>
    <string name="password_hint">Enter password..</string>
    <string name="login_button_text">Login</string>

    <string name="login_no_user_message">Username does not exist.</string>
    <string name="login_incorrect_password">Password is incorrect.</string>
    <string name="create_username_taken">Username is already taken.</string>
    <string name="create_user_successful">User successfully created!</string>

    <!-- Event Grid -->
    <string name="edit_button_text">Edit</string>
    <string name="delete_button_text">Delete</string>
    <string name="sort_button_text">Sort..</string>
    <string name="welcome_text">Welcome, %s!</string>
    <string name="event_label">Upcoming Events:</string>
    <string name="notification_status_disabled">Notifications are disabled. Enable?</string>
    <string name="notification_status_enable">Notifications are enabled</string>

    <string name="no_event_title">No events yet!</string>
    <string name="no_event_date"> </string>
    <string name="no_event_desc">To get started, click the + button below. To edit or delete events, just tap an event title.</string>

    <string-array name="sort_by_array">
        <item>Date</item>
        <item>Priority</item>
    </string-array>

    <!-- New Event -->
    <string name="new_event_label">New Event</string>
    <string name="new_event_title_label">Title</string>
    <string name="new_event_title_hint">Enter title..</string>
    <string name="new_event_desc_label">Description</string>
    <string name="new_event_date_label">Date</string>
    <string name="new_event_date_hint">MM/DD/YYYY</string>
    <string name="new_event_priority_label">Priority</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="add_button_text">Add</string>
    <string name="update_button_text">Update</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Notifications -->>
    <string name="channel_name">Event Notifier</string>
    <string name="channel_desc">Notifies user about events set to occur</string>

    <!-- Settings Menu -->
    <string name="notification_setting_label">Enable SMS Notifications</string>
    <string name="notification_setting_desc">SMS privileges are required in order to
                        notify you when an event is set to occur. The event system will work
                        without this setting enabled, but you will not receive alerts for events.\n\n
        Enable access for SMS notifications in the settings menu if you would like to receive alerts.
    </string>
    <string name="action_settings_title">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>



</resources>