<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    android:id="@+id/coordinatorLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/editTextUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="88dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/username_box_hint"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:text=""
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textLabelUsername" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="88dp"
            android:layout_marginTop="44dp"
            android:ems="10"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:minHeight="48dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextUsername" />

        <TextView
            android:id="@+id/textLabelNoAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="164dp"
            android:layout_marginTop="16dp"
            android:text="@string/no_account"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonLogin" />

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="213dp"
            android:layout_height="48dp"
            android:layout_marginStart="88dp"
            android:layout_marginTop="44dp"
            android:onClick="onLoginClicked"
            android:text="@string/login_button_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />


        <TextView
            android:id="@+id/textClickNewAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:clickable="true"
            android:onClick="onCreateAccountClicked"
            android:text="@string/new_account_text"
            app:layout_constraintStart_toEndOf="@+id/textLabelNoAccount"
            app:layout_constraintTop_toBottomOf="@+id/buttonLogin" />

        <TextView
            android:id="@+id/textLabelPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="88dp"
            android:layout_marginBottom="8dp"
            android:text="@string/password_label"
            app:layout_constraintBottom_toTopOf="@+id/editTextPassword"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textLabelUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginStart="88dp"
            android:layout_marginBottom="8dp"
            android:text="@string/username_label"
            app:layout_constraintBottom_toTopOf="@+id/editTextUsername"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="280dp"
            android:layout_height="241dp"
            android:layout_marginTop="72dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/calendar" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>