<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_event_grid"
    android:layout_width="match_parent"
     android:layout_height="match_parent">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/textLabelWelcome"
        style="@style/TextAppearance.AppCompat.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="28dp"
        android:text="@string/welcome_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textLabelEvents"
        style="@style/TextAppearance.AppCompat.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/event_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textLabelWelcome" />

    <Spinner
        android:id="@+id/spinnerSortBy"
        android:layout_width="wrap_content"
        android:layout_height="46dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textLabelWelcome" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="10dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textLabelEvents"
        app:layout_constraintBottom_toTopOf="@id/textLabelNotificationStatus"
         >

        <ScrollView

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp">


            <GridLayout

                android:id="@+id/eventGrid"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:columnCount="6"
                android:padding="5dp"
                android:useDefaultMargins="true"

                android:alignmentMode="alignBounds"
                >

                <!-- These are provided for UI demo-->

                <TextView
                    android:id="@+id/textEventName1"
                    style="@style/MaterialAlertDialog.MaterialComponents.Title.Text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_columnSpan="5"
                    android:layout_gravity="fill_horizontal"
                    android:layout_marginTop="12dp"
                    android:text="Sample Event" />

                <TextView
                    android:id="@+id/textEventDate"
                    style="@style/MaterialAlertDialog.MaterialComponents.Title.Text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_columnSpan="1"
                    android:layout_gravity="fill_horizontal"
                    android:layout_marginTop="12dp"
                    android:text="Date" />

                <TextView
                    android:id="@+id/textEventDesc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_columnSpan="6"
                    android:layout_gravity="fill_horizontal"
                    android:layout_marginTop="12dp"
                    android:text="This is an event that is going to occur and this description describes this event in detail and eventually we will hide this until tapped." />


                <TextView
                    android:id="@+id/textEventButtonBuffer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_columnSpan="4"
                    android:layout_gravity="fill_horizontal"
                    android:layout_marginTop="12dp"
                    android:text="                                    " />


                <Button
                    android:id="@+id/buttonEdit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_columnSpan="1"
                    android:layout_gravity="fill_horizontal"
                    android:text="@string/edit_button_text" />


                <Button
                    android:id="@+id/buttonDelete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="fill_horizontal"
                    android:text="@string/delete_button_text" />

                <TextView

                    style="@style/MaterialAlertDialog.MaterialComponents.Title.Text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_columnSpan="5"
                    android:layout_gravity="fill_horizontal"
                    android:layout_marginTop="12dp"
                    android:text="Sample Event 2" />

                <TextView
                    style="@style/MaterialAlertDialog.MaterialComponents.Title.Text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_columnSpan="1"
                    android:layout_gravity="fill_horizontal"
                    android:layout_marginTop="12dp"
                    android:text="Date" />

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_columnSpan="6"
                    android:layout_gravity="fill_horizontal"
                    android:layout_marginTop="12dp"
                    android:text="An event with a shorter description.." />


                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_columnSpan="4"
                    android:layout_gravity="fill_horizontal"
                    android:layout_marginTop="12dp"
                    android:text="                                    " />


                <Button

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_columnSpan="1"
                    android:layout_gravity="fill_horizontal"
                    android:text="@string/edit_button_text" />


                <Button

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="fill_horizontal"
                    android:text="@string/delete_button_text" />

                <TextView

                    style="@style/MaterialAlertDialog.MaterialComponents.Title.Text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_columnSpan="5"
                    android:layout_gravity="fill_horizontal"
                    android:layout_marginTop="12dp"
                    android:text="Sample Event 3" />

                <TextView

                    style="@style/MaterialAlertDialog.MaterialComponents.Title.Text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_columnSpan="1"
                    android:layout_gravity="fill_horizontal"
                    android:layout_marginTop="12dp"
                    android:text="Date" />

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_columnSpan="6"
                    android:layout_gravity="fill_horizontal"
                    android:layout_marginTop="12dp"
                    android:text="This is an event that is going to occur and this description describes this event in detail and eventually we will hide this until tapped." />


                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_columnSpan="4"
                    android:layout_gravity="fill_horizontal"
                    android:layout_marginTop="12dp"
                    android:text="                                    " />


                <Button

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_columnSpan="1"
                    android:layout_gravity="fill_horizontal"
                    android:text="@string/edit_button_text" />


                <Button

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="fill_horizontal"
                    android:text="@string/delete_button_text" />


            </GridLayout>
        </ScrollView>
    </androidx.cardview.widget.CardView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:background="@color/colorAccent"
        android:backgroundTint="@color/colorAccent"
        android:foregroundTint="@color/colorAccent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="60dp"
        android:clickable="true"
        android:onClick="onPlusFABClicked"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_input_add" />

    <TextView
        android:id="@+id/textLabelNotificationStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="120dp"
        android:clickable="true"
        android:onClick="onNotificationClicked"
        android:text="@string/notification_status_disabled"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.fragment.app.FragmentContainerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="50dp"

        android:id="@+id/fragment_container_view"
        >
    </androidx.fragment.app.FragmentContainerView>

</FrameLayout>